<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--names-->
    <com.ctrlplusz.anytextview.AnyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/name_of_patient"
        android:textColor="@color/grey"
        android:textSize="15sp"
        android:textStyle="bold"
        app:typeface="Nirmala.ttf" />

    <EditText
        android:id="@+id/f_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/first_name"
        android:imeOptions="actionNext"
        android:padding="10dp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/s_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/other_name"
        android:imeOptions="actionNext"
        android:padding="10dp"
        android:singleLine="true" />

    <!--phone number-->
    <com.ctrlplusz.anytextview.AnyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/phone_number"
        android:textColor="@color/grey"
        android:textSize="15sp"
        android:textStyle="bold"
        app:typeface="Nirmala.ttf" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_bg"
        android:digits="01234567890"
        android:hint="@string/phone_format"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:padding="10dp"
        android:singleLine="true" />
    <!--date of birth-->
    <com.ctrlplusz.anytextview.AnyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/date_of_birth"
        android:textColor="@color/grey"
        android:textSize="15sp"
        android:textStyle="bold"
        app:typeface="Nirmala.ttf" />

    <EditText
        android:id="@+id/dob"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_bg"
        android:hint="12-12-1992"
        android:imeOptions="actionNext"
        android:inputType="phone"
        android:padding="10dp"
        android:singleLine="true" />
    <!--gender-->
    <com.ctrlplusz.anytextview.AnyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/gender"
        android:textColor="@color/grey"
        android:textSize="15sp"
        android:textStyle="bold"
        app:typeface="Nirmala.ttf" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="horizontal"
        android:padding="10dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/male" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="30dp"
            android:layout_marginStart="30dp"
            android:text="@string/female" />
    </LinearLayout>

    <Button
        android:id="@+id/done"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/style_button_shape"
        android:text="@string/add_patient"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>