<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--mother details-->
    <com.ctrlplusz.anytextview.AnyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/mother_details"
        android:textColor="@color/grey"
        android:textSize="15sp"
        android:textStyle="bold"
        app:typeface="Nirmala.ttf" />
    <!--mother name-->
    <EditText
        android:id="@+id/m_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/mother_name"
        android:padding="10dp" />
    <!--mother id no.-->
    <EditText
        android:id="@+id/m_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_bg"
        android:digits="01234567890"
        android:hint="@string/id_number"
        android:padding="10dp" />
    <!--phone number-->

    <EditText
        android:id="@+id/m_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_bg"
        android:digits="01234567890"
        android:hint="@string/phone_number_phone_format"
        android:inputType="phone"
        android:padding="10dp" />


    <!--father details-->
    <com.ctrlplusz.anytextview.AnyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/father_details"
        android:textColor="@color/grey"
        android:textSize="15sp"
        android:textStyle="bold"
        app:typeface="Nirmala.ttf" />
    <!--father name-->
    <EditText
        android:id="@+id/f_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/father_name"
        android:padding="10dp" />
    <!--father id no.-->
    <EditText
        android:id="@+id/f_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_bg"
        android:digits="01234567890"
        android:hint="@string/id_number"
        android:padding="10dp" />

    <!--phone number-->
    <EditText
        android:id="@+id/f_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_bg"
        android:digits="01234567890"
        android:hint="@string/phone_number_phone_format"
        android:inputType="phone"
        android:padding="10dp" />
    <!--Residence-->
    <com.ctrlplusz.anytextview.AnyTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="5dp"
        android:text="@string/residence"
        android:textColor="@color/grey"
        android:textSize="15sp"
        android:textStyle="bold"
        app:typeface="Nirmala.ttf" />

    <EditText
        android:id="@+id/residence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/where_you_live"
        android:inputType="phone"
        android:padding="10dp" />

    <Button
        android:id="@+id/done"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="20dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/style_button_shape"
        android:text="@string/add_family"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="bold" />
</LinearLayout>